<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tab1Fragment"
    android:orientation="vertical"
    android:id="@+id/tab1_gourmet"
    android:background="@android:color/holo_green_light">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_gourmet1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_lovely_gourmet_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_margin="16dp"/>
    <TextView
        android:id="@+id/tv_gourmet2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_lovely_gourmet_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/tv_gourmet3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_lovely_gourmet_3"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_margin="16dp"/>
    <Button
        android:id="@+id/button_tab1_increment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Increment"
        />

</LinearLayout>